<resources>
    <string name="app_name">PokeApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Pokedex">Pokedex</string>
    <string name="Boussole">Boussole</string>
    <string name="Podomètre">Podomètre</string>
    <string name="Podometer">Podometer</string>
    <string name="Compass">Compass</string>
    <string name="Pedometer">Pedometer</string>
    <string name="number">Number</string>
    <string name="height">Height</string>
    <string name="reset">Reset</string>
    <string name="todo">TODO</string>
    <string name="Collection">Collection</string>
</resources>