<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_pokedex">

    <fragment
        android:id="@+id/navigation_pokedex"
        android:name="com.example.pokeapp.ui.home.HomeFragment"
        android:label="@string/Pokedex"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_boussole"
        android:name="com.example.pokeapp.ui.dashboard.DashboardFragment"
        android:label="@string/Boussole"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_podometre"
        android:name="com.example.pokeapp.ui.notifications.NotificationsFragment"
        android:label="@string/Podomètre"
        tools:layout="@layout/fragment_notifications" />
</navigation>