<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="4dp"
        android:text="INFO"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:padding="4dp"
        android:text="Name"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_pokename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:padding="4dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_name"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_label_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:padding="4dp"
        android:text="@string/number"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokename"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_pokeid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:padding="4dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_id"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_label_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:padding="4dp"
        android:text="@string/height"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokeid"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_pokeheight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:padding="4dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_height"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imagePokemon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:layout_weight="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokeheight" />

    <Button
        android:id="@+id/btnCompass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="44dp"
        android:layout_weight="1"
        android:onClick="openCompass"
        android:text="@string/Compass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePokemon"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnPodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="56dp"
        android:layout_weight="1"
        android:onClick="openPodo"
        android:text="@string/Pedometer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePokemon"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCollection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/Collection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePokemon"
        app:layout_constraintVertical_bias="0.04" />


</androidx.constraintlayout.widget.ConstraintLayout>